# HWsign

./: .gitignore  README.md  pyproject.toml
configs/: ms_signet_csw_0116.yaml  ms_signet_hansig.yaml  paths.example.yaml
datasets/: README.md  __init__.py
datasets/interfaces/: __init__.py  base.py  hansig.py
datasets/manifests/: hansig.example.csv
evaluate/: __init__.py  calibrate_threshold.py  evaluate_pairs.py  metrics.py
scripts/: prepare_hansig_manifest.py  smoke_test.py
src/: __init__.py
src/common/: __init__.py  prepare_annotation_v2.py  preprocess_images.py  run.py  signature_dataset.py  transforms.py  utils.py
src/ms_signet/: __init__.py  infer.py  loss.py  model.py  sampler.py  train.py
tests/: test_hansig_manifest.py  test_metrics.py  test_ms_signet_forward.py  test_ms_signet_sampler.py  test_prepare_annotation_v2.py  test_preprocess_images.py  test_run_layout.py  test_signature_dataset.py
